# DAV-Save-Tool

./: Cargo.toml  README.md  WindowsFormsApp1.sln
WindowsFormsApp1/: DarkModeCS.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Messenger.cs  WindowsFormsApp1.csproj
WindowsFormsApp1/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/: enums.rs  main.rs  structs.rs  utils.rs
src/bw_save_game_client_data_reader/: bw_save_game_client_data_reader.rs  mod.rs  structs.rs
src/bw_save_game_metadata_reader/: bw_save_game_metadata_reader.rs  enums.rs  mod.rs  structs.rs
src/bw_save_game_reader/: bw_save_game_reader.rs  mod.rs  structs.rs
src/bw_save_game_writer/: bw_save_game_writer.rs  mod.rs  structs.rs
src/csav/: csav.rs  mod.rs  structs.rs
