[package]
name = "dav_save_tool"
version = "0.1.1"
edition = "2021"

[dependencies]
flate2 = "1.0.34"
clap = { version = "4.5.20", features = ["derive"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
chrono = { version = "0.4.38" , features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"

[profile.release]
strip = true
